@@ -10,6 +10,7 @@ New Features:
 * pager was changed to propagate Control-Button3 clicks to parent window
 * dclock was changed to propagate Control-Button3 clicks to parent window
 * menu was changed to propagate Control-Button3 clicks to parent window
+* normal support for round corners. Config file gets new global integer option - RoundCornersRadius
 
 4.12
 New Features:
